Fix share menu being cut off on mobile devices (#484)

--- a/src/less/blocks/page.less
+++ b/src/less/blocks/page.less
@@ -243,7 +243,6 @@
   @media @before-normal {
     flex: none;
     width: 100%;
-    overflow: hidden;
   }
 
   &-mobile_space {
